[gd_scene load_steps=27 format=3 uid="uid://bw5el7n36awdr"]

[ext_resource type="Script" uid="uid://cslkhtib5limu" path="res://scripts/mainMenu.gd" id="1_tov5d"]
[ext_resource type="FontFile" uid="uid://bpr71paph0c0t" path="res://fonts/VCR_OSD_MONO_1.001.ttf" id="3_jfr2g"]
[ext_resource type="Shader" uid="uid://b8mxoacu7poqc" path="res://shader/sky.gdshader" id="7_ewahu"]
[ext_resource type="Shader" uid="uid://c37jx2ebwp1a3" path="res://shader/shader_water.gdshader" id="10_tlicg"]
[ext_resource type="Texture2D" uid="uid://cvllk03mhtybp" path="res://textures/723-normal.jpg" id="11_808lr"]
[ext_resource type="AudioStream" uid="uid://gqmombudmim" path="res://sounds/Fisher.mp3" id="11_tov5d"]
[ext_resource type="Texture2D" uid="uid://d31603nl8y0gd" path="res://textures/Water_preview.jpgC878A51E-2B84-45CA-85CB-75E5BC88EEC8Large.jpg" id="12_uwljm"]
[ext_resource type="Shader" uid="uid://cfsuhiaq15sgu" path="res://shader/outline.gdshader" id="13_1anpv"]
[ext_resource type="PackedScene" uid="uid://brmbdno888s38" path="res://assets/tree.glb" id="14_3wx87"]
[ext_resource type="PackedScene" uid="uid://b5ew1rfc8ow8g" path="res://scenes/fishingRod.tscn" id="15_5p8yk"]

[sub_resource type="Shader" id="Shader_6b2wv"]
code = "shader_type canvas_item;

uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_nearest;
uniform float pixel_size : hint_range(1.0, 1000.0) = 200;

void fragment() {
    vec2 uv = SCREEN_UV;

    uv = floor(uv * pixel_size) / pixel_size;

    COLOR = texture(SCREEN_TEXTURE, uv);
}


"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1wiy7"]
shader = SubResource("Shader_6b2wv")
shader_parameter/pixel_size = 290.82

[sub_resource type="Theme" id="Theme_6b2wv"]
default_font = ExtResource("3_jfr2g")
default_font_size = 50

[sub_resource type="Theme" id="Theme_tov5d"]
default_font = ExtResource("3_jfr2g")
default_font_size = 23

[sub_resource type="Theme" id="Theme_epn8x"]
default_font = ExtResource("3_jfr2g")
default_font_size = 23

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cfq0f"]
shader = ExtResource("7_ewahu")
shader_parameter/use_directional_light = true
shader_parameter/sun_color = Color(1, 1, 1, 1)
shader_parameter/sun_energy = 15.0
shader_parameter/cloud_color = Color(0.296, 0.402, 0.521, 1)
shader_parameter/cloud_density = 5.0
shader_parameter/cloud_depth = 2.0
shader_parameter/cloud_sag = 2.0
shader_parameter/noise_tiling = Vector2(1, 1)
shader_parameter/wind_speed = Vector2(0.5, 0.5)
shader_parameter/ground_bottom_color = Color(0.2, 0.169, 0.133, 1)
shader_parameter/ground_curve = 0.04
shader_parameter/exposure = 1.0

[sub_resource type="Sky" id="Sky_x537r"]
sky_material = SubResource("ShaderMaterial_cfq0f")
radiance_size = 0

[sub_resource type="Environment" id="Environment_cfq0f"]
background_mode = 2
background_energy_multiplier = 0.33
sky = SubResource("Sky_x537r")
fog_light_color = Color(0.808262, 0.429746, 0.296975, 1)
fog_light_energy = 0.0
fog_sun_scatter = 1.0
fog_sky_affect = 0.0
volumetric_fog_enabled = true
volumetric_fog_length = 42.44
volumetric_fog_ambient_inject = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k24pf"]
render_priority = -128
shader = ExtResource("10_tlicg")
shader_parameter/wave_1 = Vector4(0.3, 4, 0.2, 0.6)
shader_parameter/wave_2 = Vector4(-0.26, -0.19, 0.01, 0.47)
shader_parameter/wave_3 = Vector4(-7.67, 5.63, 0.1, 0.38)
shader_parameter/wave_4 = Vector4(-0.42, -1.63, 0.1, 0.28)
shader_parameter/wave_5 = Vector4(1.66, 0.07, 0.15, 1.81)
shader_parameter/wave_6 = Vector4(1.2, 1.14, 0.01, 0.33)
shader_parameter/wave_7 = Vector4(-1.6, 7.3, 0.11, 0.73)
shader_parameter/wave_8 = Vector4(-0.42, -1.63, 0.15, 1.52)
shader_parameter/time_factor = 6.975
shader_parameter/noise_zoom = 3.885
shader_parameter/noise_amp = 1.545
shader_parameter/base_water_color = Color(0.188783, 0.538177, 0.53811, 1)
shader_parameter/fresnel_water_color = Color(0.762158, 0.371565, 0.128367, 1)
shader_parameter/deep_water_color = Color(0, 0.20636, 0.393908, 1)
shader_parameter/shallow_water_color = Color(0.189291, 0.841735, 0.976884, 1)
shader_parameter/beers_law = 0.405
shader_parameter/depth_offset = 0.095
shader_parameter/near = 7.0
shader_parameter/far = 10000.0
shader_parameter/edge_texture_scale = 4.715
shader_parameter/edge_texture_offset = 1.0
shader_parameter/edge_texture_speed = 0.1
shader_parameter/edge_foam_intensity = 2.0
shader_parameter/edge_fade_start = -3.0
shader_parameter/edge_fade_end = 6.6
shader_parameter/peak_height_threshold = 1.0
shader_parameter/peak_color = Vector3(1, 1, 1)
shader_parameter/peak_intensity = 1.0
shader_parameter/foam_intensity = 1.0
shader_parameter/foam_scale = 1.0
shader_parameter/metallic = 1.87
shader_parameter/roughness = 0.115
shader_parameter/uv_scale_text_a = 0.23
shader_parameter/uv_speed_text_a = Vector2(0.14, 0.3)
shader_parameter/uv_scale_text_b = 0.855
shader_parameter/uv_speed_text_b = Vector2(0.15, 0.1)
shader_parameter/normal_strength = 0.28
shader_parameter/uv_sampler_scale = 0.3
shader_parameter/blend_factor = 0.795
shader_parameter/perturbation_strength = 0.37
shader_parameter/perturbation_time = 0.3
shader_parameter/normalmap_a = ExtResource("11_808lr")
shader_parameter/normalmap_b = ExtResource("12_uwljm")
shader_parameter/caustics_intensity = 17.2
shader_parameter/num_caustic_layers = 16.0
shader_parameter/caustic_distortion_strength = 0.001

[sub_resource type="PlaneMesh" id="PlaneMesh_qg23i"]
lightmap_size_hint = Vector2i(251, 1001)
material = SubResource("ShaderMaterial_k24pf")
uv2_padding = 1.41
size = Vector2(200, 200)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8wjpf"]
width = 1117
height = 1
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_25dfr"]
render_priority = 0
shader = ExtResource("13_1anpv")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/thickness = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kjvyo"]
next_pass = SubResource("ShaderMaterial_25dfr")
albedo_color = Color(0.38745, 0.137208, 0, 1)
albedo_texture = SubResource("NoiseTexture2D_8wjpf")

[sub_resource type="BoxMesh" id="BoxMesh_u1u68"]
material = SubResource("StandardMaterial3D_kjvyo")
size = Vector3(1.885, 0.34, 12.555)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kp0ql"]
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 16.0

[sub_resource type="SphereMesh" id="SphereMesh_08o8g"]
material = SubResource("StandardMaterial3D_kp0ql")

[node name="MainScene" type="Node3D"]
script = ExtResource("1_tov5d")

[node name="Filter" type="CanvasLayer" parent="."]
layer = 0

[node name="PixelateOverlay" type="ColorRect" parent="Filter"]
material = SubResource("ShaderMaterial_1wiy7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -11.5
offset_right = 66.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6b2wv")
text = "LAST FISHERMAN"

[node name="Button" type="Button" parent="UI"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 109.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_tov5d")
text = "Start"

[node name="Luca Müller" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -44.0
offset_right = 410.0
grow_vertical = 0
size_flags_horizontal = 0
theme = SubResource("Theme_epn8x")
text = "Luca Müller"
vertical_alignment = 1

[node name="ResetButton" type="Button" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "RESET GAME"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_cfq0f")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(-0.805949, 0, 0.591985, 0, 1, 0, -0.591985, 0, -0.805949, 2.14169, 1.27432, 0.0851256)

[node name="WaterPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 1.53095, 91.1433)
mesh = SubResource("PlaneMesh_qg23i")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.931818, 0.362926, 0, -0.362926, 0.931818, -1.07784, 37.4465, 160.116)
light_color = Color(0.99552, 0.467887, 0.0444731, 1)
light_energy = 16.0
light_indirect_energy = 5.041
light_volumetric_fog_energy = 0.485
light_angular_distance = 13.64
light_specular = 0.676
shadow_enabled = true
directional_shadow_split_1 = 0.079
directional_shadow_split_2 = 0.352
directional_shadow_split_3 = 0.268
directional_shadow_fade_start = 0.507
directional_shadow_max_distance = 83.4
sky_mode = 1

[node name="Steg" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.764632, -4.11893)
mesh = SubResource("BoxMesh_u1u68")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(26.165, 0, 0, 0, 26.165, 0, 0, 0, 26.165, 0, 2.72752, 228.721)
mesh = SubResource("SphereMesh_08o8g")

[node name="tree" parent="." instance=ExtResource("14_3wx87")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.02284, 0, 17.0507)

[node name="tree3" parent="." instance=ExtResource("14_3wx87")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.52933, 0, 28.9893)

[node name="FishingRod" parent="." instance=ExtResource("15_5p8yk")]
transform = Transform3D(-0.925417, 0.163176, 0.34202, 0.173648, 0.984808, 0, -0.336824, 0.0593912, -0.939693, -0.4, 1.60667, 1.08245)
script = null

[node name="RodMesh" parent="FishingRod" index="0"]
transform = Transform3D(0.8, 0, 0, 0, 0.773459, 0.204357, 0, -0.204357, 0.773459, 0.00607872, 0.0344733, 0)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_tov5d")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/ResetButton" to="." method="_on_reset_button_pressed"]

[editable path="FishingRod"]
